fix(card): spacing and background color

--- a/src/components/shared/Card.module.css
+++ b/src/components/shared/Card.module.css
@@ -13,6 +13,7 @@
   padding: 24px;
   box-shadow: var(--ifm-global-shadow-lw);
   border-radius: 8px;
+  background: var(--bt-sidebar-background-color);
 }
 
 .clickable:hover {
@@ -24,7 +25,7 @@
 }
 
 .header {
-  margin-bottom: 8px;
+  margin-bottom: 4px;
 }
 
 .primary-header {
